examples/tactics/neg/LemmaArgs.fst.hints
[
  "\b’ÒC®\u0001V„Ò¶4cðÜ1i",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query", "assumption_Prims.HasEq_int",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "494b082b50f77893969666cba916517d"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "16ed7099a8440706e8bb6a29d5e8bc0d"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "4d9d30bbbc8c89d7815546f838e9889b"
    ]
  ]
]